<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oxylyzer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="oxi_title">Oxygen levels</string>

    <string-array name="oxi_array">
        <item>All</item>
        <item>90-100%</item>
        <item>80-89.99999%</item>
        <item>70-79.99999%</item>
        <item>60-69.99999%</item>
        <item>Dead</item>
    </string-array>

    <string name="pulse_title">Pulse Rates</string>

    <string-array name="pulse_array">
        <item>All</item>
        <item>High</item>
        <item>Med</item>
        <item>Low</item>
        <item>U Dead Bro</item>
    </string-array>
    <string-array name="gender_array">
        <item>Born Male</item>
        <item>Born Female</item>
        <item>Born Other</item>
    </string-array>
    <string-array name="measure_array">
        <item>Metric (cm, kg)</item>
        <item>Imperial (in, lb)</item>
    </string-array>

    <string name="button_start">Start\nRecording</string>
    <string name="button_stop">Stop\nRecording</string>
    <string name="view_report">View Report</string>
    <string name="records_title">Previous Recordings</string>
    <string name="BMI_title">BMI</string>
    <string name="title_activity_new_profile">Create Profile</string>
    <string name="enter_name">Name</string>
    <string name="enter_age">Age</string>
    <string name="enter_gender">Gender</string>
    <string name="enter_weight">Weight</string>
    <string name="enter_height">Height</string>
    <string name="reminder">Please fill out all of the fields!</string>
    <string name="ok">OK</string>
    <string name="buttonsave">Save Profile</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_medical_questionnaire">MedicalQuestionnaire</string>
    <string name="title_activity_questionnaire_form1">QuestionnaireForm1</string>
    <string name="title_activity_questionnaire_form2">QuestionnaireForm2</string>
<<<<<<< HEAD
    <string name="title_activity_questionnaire_form4">QuestionnaireForm4</string>
=======
    <string name="title_activity_questionnaire_form3">QuestionnaireForm3</string>
>>>>>>> 06ac8dad237d2a99de251dce023848558aeacfb7

</resources>
