<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/FirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_age"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_gender"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Units"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/measure_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/height_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_height"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/height"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/weight_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_weight"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/neck_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Neck Circumfrence"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/neck"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="saveProfile"
            android:text="@string/buttonsave" />
    </LinearLayout>
</ScrollView>
